[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = "Chain and agent examples on LangChain"
authors = ["Ricardo Santos <ricardo.santos.diaz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.348"
openai = "^1.3.8"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pylint = "^3.0.2"
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
